fix alle librerie + gestione grafica della finestra modale delle persone
per l'autocompilazione delle anagrafiche delle persone

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -55,8 +55,10 @@ label.cambia_password=Cambia password
 label.cambio_password=Cambio password
 label.cap=CAP
 label.cellulare=Cellulare
+label.cerca_persona=Cerca persona
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
+label.chiudi=Chiudi
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA 
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
@@ -123,6 +125,7 @@ label.invia=Invia
 label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
 label.locked=Bloccato
+label.lookup=Cerca
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
 label.nessun_file_selezionato=Nessun file selezionato
@@ -186,6 +189,7 @@ label.sedi=Sedi
 label.segreteria=Segreteria
 label.sei_un_nuovo_provider=Sei un nuovo provider?
 label.seleziona=Seleziona...
+label.seleziona_button=Seleziona
 label.settoriale=Settoriale
 label.sezione=Sezione
 label.sistemaInformatico=Sistema informatico dedicato alla formazione in ambito sanitario
@@ -214,4 +218,3 @@ message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
-label.chiudi=Chiudi
