Logica di invio domanda di accreditamento
Logica di persistenza degli idEditabili
Invio messaggio in caso di eccezioni

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -89,6 +89,7 @@ label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.email=E-mail
+label.invia_domanda=Invia Domanda
 label.enabled=Abilitato
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
@@ -207,7 +208,9 @@ message.allegati_inseriti=I file degli allegati sono stati inseriti con successo
 message.completato=Operazione effettuata!
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
+message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.errore=Si è verificato un errore!
+message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=L'elemento è stato salvato con successo.
 message.password_cambiata=La password è stata cambiata con successo.
