Comitato Scientifico Work in progress

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -6,6 +6,9 @@ app.title=ECM - Regione Veneto
 app.title_short=ECM
 error.codiceFiscale.duplicated=il codicefiscale risulta già registrato nel sistema
 error.complete=campo non completo
+error.componente_presente=\u00C8 già presente questo Componente nel Comitato Scientifico
+error.coordinatore_presente=\u00C8 già presente un Coordinatore nel Comitato Scientifico
+error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
 error.email.duplicated=email già registrata nel sistema
 error.email=email non valida
 error.email_repeat=l'email deve coincidere
@@ -18,6 +21,9 @@ error.name.duplicated=nome già registrato
 error.number=il valore deve essere numerico
 error.number_max=valore superiore al valore massimo consentito
 error.number_min=valore inferiore al valore minimo consentito
+error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da almeno 5 componenti (coordinatore incluso)
+error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni diverse
+error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
@@ -91,7 +97,6 @@ label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.email=E-mail
-label.invia_domanda=Invia Domanda
 label.enabled=Abilitato
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
@@ -123,6 +128,7 @@ label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta d
 label.info_provider=Info provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.invia=Invia
+label.invia_domanda=Invia Domanda
 label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
 label.locked=Bloccato
