pulsanti per eliminare i componenti del comitato

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -63,6 +63,8 @@ label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
+label.comitato_scientifico=Comitato Scientifico
+label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
 label.comune=Comune
 label.comunicazioni=Comunicazioni
 label.conferma=Conferma
@@ -91,7 +93,6 @@ label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
 label.email=E-mail
-label.invia_domanda=Invia Domanda
 label.enabled=Abilitato
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
@@ -123,6 +124,7 @@ label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta d
 label.info_provider=Info provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.invia=Invia
+label.invia_domanda=Invia Domanda
 label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
 label.locked=Bloccato
@@ -221,3 +223,7 @@ message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
+label.coordinatore_comitato=Coordinatore
+label.componente_comitato=Componente
+label.nd=N\\D
+label.rimuovi=Rimuovi
