modifica accreditamentoShow, aggiunta class css disabled

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -233,3 +233,4 @@ label.coordinatore_comitato=Coordinatore
 label.componente_comitato=Componente
 label.nd=N\\D
 label.rimuovi=Rimuovi
+label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
