nuova gestione pulsanti, qualche label e inizio uploadModelli

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -122,7 +122,7 @@ label.hai_gia_account=Hai già un account?
 label.home=Torna alla Home
 label.id=Id
 label.incarico_presso_la_struttura=Incarico presso la struttura
-label.indietro=indietro
+label.indietro=Indietro
 label.indirizzo=Indirizzo
 label.info_account=Accedi all'area riservata
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
@@ -234,3 +234,4 @@ label.componente_comitato=Componente
 label.nd=N\\D
 label.rimuovi=Rimuovi
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
+label.modelli_allegato=Modelli di allegato
