Inserita la label con parametro per l'inserimento delle persone

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -224,7 +224,7 @@ message.domanda_inviata=La domanda è stata inviata correttamente alla segreteri
 message.errore=Si è verificato un errore!
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
-message.inserito=L'elemento è stato salvato con successo.
+message.inserito=Il {0} è stato salvato con successo.
 message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
@@ -236,4 +236,4 @@ label.rimuovi=Rimuovi
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
 label.modelli_allegato=Modelli di allegato
 label.aggiungi_componente=Aggiungi componente del comitato
-message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (srsly errore eccezione)
+message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (hai spaccato tutto)
