Gestione Componenti Comitato wip

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -47,6 +47,7 @@ label.accreditamento_tipo=Tipologia
 label.accreditamento_tipologia=Accreditamento per tipologia
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
+label.aggiungi_componente=Aggiungi componente del comitato
 label.allegati=Allegati
 label.allegato=Allegato
 label.altro_personale=Altro personale
@@ -70,12 +71,14 @@ label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
 label.comitato_scientifico=Comitato Scientifico
+label.componente_comitato=Componente
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
 label.comune=Comune
 label.comunicazioni=Comunicazioni
 label.conferma=Conferma
 label.conferma_password=Conferma Password
 label.contributo_annuale=Contributo Annuale
+label.coordinatore_comitato=Coordinatore
 label.crea_account=Crea Account
 label.creazione_profilo=Creazione Profilo
 label.creazione_utente=Creazione Utente
@@ -131,12 +134,15 @@ label.info_provider=Info provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.invia=Invia
 label.invia_domanda=Invia Domanda
+label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
 label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
 label.locked=Bloccato
 label.lookup=Cerca
+label.modelli_allegato=Modelli di allegato
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
+label.nd=N\\D
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
@@ -188,6 +194,7 @@ label.responsabile_sistema_informatico=Responsabile Sistema Informatico
 label.responsabili=Responsabili
 label.richiesta_accreditamento=Richiesta Accreditamento
 label.ricordami=Ricordami
+label.rimuovi=Rimuovi
 label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
@@ -218,22 +225,16 @@ label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.completato=Operazione effettuata!
+message.componente_comitato_eliminato=Componente del Comitato Scientifico eliminato
 message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRiceverete a breve la mail che vi fornirà le informazioni e le credenziali per effettuare l’accesso al sistema.\nVi invitiamo a predisporre la documentazione necessaria da allegare alla richiesta di accreditamento.
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.errore=Si è verificato un errore!
+message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (srsly errore eccezione)
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
-message.inserito=L'elemento è stato salvato con successo.
+message.inserito={0} salvato con successo.
 message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
-label.coordinatore_comitato=Coordinatore
-label.componente_comitato=Componente
-label.nd=N\\D
-label.rimuovi=Rimuovi
-label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
-label.modelli_allegato=Modelli di allegato
-label.aggiungi_componente=Aggiungi componente del comitato
-message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (srsly errore eccezione)
