Aggiunta checkbox per la delega nel providerForm e enum tipo provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -96,6 +96,7 @@ label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
 label.dati_legale=Dati del legale
 label.delega=Delega
+label.delega_checkbox=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
 label.denominazione_legale=Denominazione Legale
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
