--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -131,7 +131,6 @@ label.indirizzo=Indirizzo
 label.info_account=Accedi all'area riservata
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
-label.info_provider=Info provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.invia=Invia
 label.invia_domanda=Invia Domanda
@@ -199,6 +198,7 @@ label.rimuovi=Rimuovi
 label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
+label.scheda_provider=Scheda provider
 label.sede_di=Sede di 
 label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
