riaggiunta label info provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -131,6 +131,7 @@ label.indirizzo=Indirizzo
 label.info_account=Accedi all'area riservata
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
+label.info_provider=Info provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.invia=Invia
 label.invia_domanda=Invia Domanda
