--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -21,9 +21,10 @@ error.name.duplicated=nome già registrato
 error.number=il valore deve essere numerico
 error.number_max=valore superiore al valore massimo consentito
 error.number_min=valore inferiore al valore minimo consentito
-error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da almeno 5 componenti (coordinatore incluso)
+error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni diverse
 error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
+error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
 error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
@@ -232,7 +233,7 @@ message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRi
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.errore=Si è verificato un errore!
-message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (srsly errore eccezione)
+message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (a.k.a. hai spaccato tutto)
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
