Messaggio warning in creazione di un responsabile che dice che salvando non sarà più possibile modificare il rappresentante legale

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -112,6 +112,7 @@ label.esempio_modello=Modello di esempio
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
+label.facoltativo=facoltativo
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni (in migliaia di euro)
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni (in migliaia di euro)
 label.fax=FAX
@@ -241,3 +242,5 @@ message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
+message.warning=Attenzione
+message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rapprsentante Legale.
