Bugfix sedeoperativo check + aggiunte label

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -103,6 +103,7 @@ label.denominazione_legale=Denominazione Legale
 label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
 label.disciplina=Disciplina
+label.elimina=elimina
 label.email=E-mail
 label.enabled=Abilitato
 label.error=Errore
@@ -153,12 +154,14 @@ label.no=No
 label.no_profit=Società no-profit
 label.nome=Nome
 label.nome_utente=Nome Utente
+label.non_inserito=non inserito
 label.not_enabled=Disabilitato
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.nuova_domanda=Nuova domanda
 label.nuova_password=Nuova Password
 label.nuovo=Nuovo
 label.nuovo_provider=Nuovo provider
+label.ok=ok
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
 label.partita_iva=Partita IVA
@@ -240,7 +243,7 @@ message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (a.k.a. hai 
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
-message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rapprsentante Legale.
+message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
 message.password_cambiata=La password è stata cambiata con successo.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
