aggiunto backToTop per tornare a inizio pagina, megafix CSS del progetto

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -226,6 +226,7 @@ label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
+label.torna_su=Torna su
 label.tutte="Tutte"
 label.username=Username
 label.utenti=Utenti
