Aggiunta la possibilità di caricare la firma digitale negli allegati

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -120,6 +120,7 @@ label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del 
 label.fax=FAX
 label.file_descrizione=Descrizione
 label.file_nome=File
+label.firma_digitalmente=Firma digitalmente
 label.funzionigramma=Funzionigramma
 label.generale=Generale
 label.gestione_password=Gestione Password
