--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -252,3 +252,9 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
+label.valutazione=Valutazione
+label.note=Note
+label.valore=Valore
+label.campo=Campo
+label.validazione=Validazione
+label.visualizza_altri=Visualizza tutte le valutazioni
