--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -241,6 +241,7 @@ message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRi
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.errore=Si è verificato un errore!
+message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file 
 message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (a.k.a. hai spaccato tutto)
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
