piano formativo show + datatable nel footer + extend di eventoWrapper

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -179,7 +179,7 @@ label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.privata=Privata
 label.procedure_formative=Procedure formative
 label.professione=Professione
-label.professioni=Professioni
+label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
 label.provider=Provider
@@ -259,3 +259,9 @@ label.valore=Valore
 label.campo=Campo
 label.validazione=Validazione
 label.visualizza_altri=Visualizza tutte le valutazioni
+label.inserimento_piano_formativo=Piano formativo relativo all'anno {0}
+label.tipologia_evento=Tipologia dell'evento
+label.evento_titolo=Evento {0}
+label.procedure_formative_tipologia=Tipologia dell'offerta formativa
+label.caratteri_rimanenti=caratteri rimanenti
+label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
