--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -36,6 +36,7 @@ label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.RES=formazione residenziale (RES)
 label.accedi=Accedi
+label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.accreditamenti_lista=Domande di accreditamento presentate
 label.accreditamento=Accreditamento
 label.accreditamento_invio=Data invio
@@ -259,9 +260,11 @@ label.valore=Valore
 label.campo=Campo
 label.validazione=Validazione
 label.visualizza_altri=Visualizza tutte le valutazioni
-label.inserimento_piano_formativo=Piano formativo relativo all'anno {0}
+label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.tipologia_evento=Tipologia dell'evento
 label.evento_titolo=Evento {0}
 label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.caratteri_rimanenti=caratteri rimanenti
 label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
+label.aggiungi_evento=Aggiungi evento
+label.rimuovi_evento=Rimuovi evento
