aggiunte labels eventoEdit

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -29,7 +29,7 @@ error.partitaIva.duplicated=la partita iva risulta già registrata nel sistema
 error.password.incorrect=password non esatta
 error.password_repeat=la password non coincide
 error.repeat=non corrisponde
-error.select=selezionare almeno un valore     
+error.select=selezionare almeno un valore
 error.url=URL errato
 error.username.duplicated=username già registrato nel sistema
 label.FAD=formazione a distanza (FAD)
@@ -41,11 +41,9 @@ label.accreditamento=Accreditamento
 label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
 label.accreditamento_nome=Nome
-label.professioniAccreditamento=Accreditamento per professioni
 label.accreditamento_scadenza=Data Scadenza
 label.accreditamento_stato=Stato
 label.accreditamento_tipo=Tipologia
-label.tipologiaAccreditamento=Accreditamento per tipologia
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
 label.aggiungi_componente=Aggiungi componente del comitato
@@ -61,13 +59,15 @@ label.benvenuto=Benvenuto
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
 label.cambio_password=Cambio password
+label.campo=Campo
 label.cap=CAP
+label.caratteri_rimanenti=caratteri rimanenti
 label.cellulare=Cellulare
 label.cerca_persona=Cerca persona
 label.cf=CF
 label.cf_straniero=Ha un codice fiscale non italiano
 label.chiudi=Chiudi
-label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA 
+label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codice_fiscale=Codice Fiscale
 label.cognome=Cognome
 label.coincide_con_sede_legale=Coincide con Sede Legale
@@ -114,6 +114,8 @@ label.esempio_modello=Modello di esempio
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
+label.evento_professioni=Evento per professioni
+label.evento_titolo=Evento {0}
 label.facoltativo=facoltativo
 label.fatturato_complessivo_title=Fatturato o Costi complessivi degli ultimi 3 anni (in migliaia di euro)
 label.fatturato_formazione_title=Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni (in migliaia di euro)
@@ -138,6 +140,7 @@ label.info_delega=Il richiedente è il legale rappresentante oppure è stato del
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
 label.info_provider=Info provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
+label.inserimento_piano_formativo=Piano formativo relativo all'anno {0}
 label.invia=Invia
 label.invia_domanda=Invia Domanda
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
@@ -158,11 +161,14 @@ label.nome=Nome
 label.nome_utente=Nome Utente
 label.non_inserito=non inserito
 label.not_enabled=Disabilitato
+label.note=Note
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.nuova_domanda=Nuova domanda
 label.nuova_password=Nuova Password
 label.nuovo=Nuovo
 label.nuovo_provider=Nuovo provider
+label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
+label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
 label.ok=ok
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
@@ -178,7 +184,9 @@ label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.privata=Privata
 label.procedure_formative=Procedure formative
+label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
+label.professioniAccreditamento=Accreditamento per professioni
 label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
@@ -207,7 +215,7 @@ label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
 label.scheda_provider=Scheda provider
-label.sede_di=Sede di 
+label.sede_di=Sede di
 label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
 label.sedi=Sedi
@@ -227,11 +235,18 @@ label.tel_secondario=Telefono secondario
 label.telefono=Telefono
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
+label.tipologiaAccreditamento=Accreditamento per tipologia
+label.tipologia_evento=Tipologia dell'evento
+label.titolo_programma_formativo=Titolo del programma formativo
 label.tutte="Tutte"
 label.username=Username
 label.utenti=Utenti
 label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
+label.validazione=Validazione
+label.valore=Valore
+label.valutazione=Valutazione
+label.visualizza_altri=Visualizza tutte le valutazioni
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzatore prima di procedere alla compilazione dei Dati dei Responsabili.
 message.compilare_tab2=Si prega di compilare la sezione dei Dati dei Responsabili prima di procedere all'inserimento degli Allegati.
@@ -241,8 +256,8 @@ message.conferma_registrazione=L’utenza è stata registrata correttamente.\nRi
 message.dati_attivita_inseriti=I dati relativi all'attività sono stati inseriti con successo.
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.errore=Si è verificato un errore!
-message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file 
 message.errore_eccezione=RUN AS FAST AS YOU CAN AND DON'T LOOK BACK (a.k.a. hai spaccato tutto)
+message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserito=Il {0} è stato salvato con successo.
@@ -253,15 +268,3 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.valutazione=Valutazione
-label.note=Note
-label.valore=Valore
-label.campo=Campo
-label.validazione=Validazione
-label.visualizza_altri=Visualizza tutte le valutazioni
-label.inserimento_piano_formativo=Piano formativo relativo all'anno {0}
-label.tipologia_evento=Tipologia dell'evento
-label.evento_titolo=Evento {0}
-label.procedure_formative_tipologia=Tipologia dell'offerta formativa
-label.caratteri_rimanenti=caratteri rimanenti
-label.obiettivo_formativo_nazionale=Obiettivo formativo Nazionale
