ripristinata una label

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -141,6 +141,7 @@ label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta d
 label.info_provider=Info provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_piano_formativo=Piano formativo relativo all'anno {0}
+label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.invia=Invia
 label.invia_domanda=Invia Domanda
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
