--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -48,15 +48,16 @@ label.accreditamento_nome=Nome
 label.accreditamento_scadenza=Data Scadenza
 label.accreditamento_stato=Stato
 label.accreditamento_tipo=Tipologia
-label.accreditamento_titolo=Domanda di Accreditamento {0} ({1}) 
+label.accreditamento_titolo=Domanda di Accreditamento {0} ({1})
 label.accreditamento_validazione=Data validazione
 label.aggiorna_account=Aggiorna Account
 label.aggiungi_componente=Aggiungi componente del comitato
+label.aggiungi_evento=Aggiungi evento
 label.allegati=Allegati
 label.allegato=Allegato
 label.altro_personale=Altro personale
+label.anno=Anno {0}
 label.annulla=Annulla
-label.aggiungi_evento=Aggiungi evento
 label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
@@ -120,7 +121,6 @@ label.esempio_modello=Modello di esempio
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni
 label.eventi=Eventi
-label.anno=Anno {0}
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_professioni=Evento per professioni
 label.evento_titolo=Evento {0}
@@ -192,7 +192,9 @@ label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
+label.prezzo=Prezzo
 label.privata=Privata
+label.procedura_formativa=Procedura formativa
 label.procedure_formative=Procedure formative
 label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
@@ -247,6 +249,7 @@ label.tempo_indeterminato=Tempo indeterminato
 label.tipo_organizzatore=Tipo Organizzatore
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
+label.titolo=Titolo
 label.titolo_programma_formativo=Titolo del programma formativo
 label.tutte="Tutte"
 label.username=Username
@@ -278,3 +281,4 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
+label.pagato=Pagato
