Inserito lo show di tutte le persone del provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -40,6 +40,7 @@ label.FAD=formazione a distanza (FAD)
 label.FSC=formazione sul campo (FSC)
 label.RES=formazione residenziale (RES)
 label.accedi=Accedi
+label.accreditamenti=Accreditamenti
 label.accreditamenti_lista=Domande di accreditamento presentate
 label.accreditamento=Accreditamento
 label.accreditamento_invio=Data invio
@@ -147,20 +148,26 @@ label.indirizzo=Indirizzo
 label.info_account=Accedi all'area riservata
 label.info_delega=Il richiedente è il legale rappresentante oppure è stato delegato dal Legale Rappresentante ad effettuare la presente richiesta?
 label.info_nuovo_provider=I nuovi utenti che indendono effettuare la richiesta di accreditamento provider provvisorio possono richiedere le credenziali compilando il modulo di registrazione.
-label.info_provider=Info provider
+label.info_provider=Informazioni del provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserisci_piano_formativo=Inserisci Piano Formativo
 label.invia=Invia
 label.invia_domanda=Invia Domanda
 label.is_coordinatore=Inserisci come Coordinatore del Comitato Scientifico
+label.italiana=Italiana
 label.iter_accreditamento=Iter Accreditamento
 label.legale_rappresentante=Legale Rappresentante
+label.list_eventi=Lista degli eventi del provider {0}
+label.lista_allegati=Lista degli allegati del provider {0}
+label.lista_persone=Lista delle persone del provider {0}
 label.locked=Bloccato
 label.lookup=Cerca
 label.modelli_allegato=Modelli di allegato
 label.modifica_profilo=Modifica Profilo
 label.modifica_utente=Modifica Utente
+label.natura_organizzazione=Natura dell'organizzazione
+label.nazionalita=Nazionalità
 label.nd=N\\D
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_provider=Non ci sono provider registrati!
@@ -182,6 +189,7 @@ label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
 label.ok=ok
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
+label.pagato=Pagato
 label.partita_iva=Partita IVA
 label.password_corrente=Password corrente
 label.password_dimenticata=Hai dimenticato la password?
@@ -242,6 +250,7 @@ label.sito_internet=Sito internet
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
+label.straniera=Straniera
 label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
@@ -260,6 +269,10 @@ label.validazione=Validazione
 label.valore=Valore
 label.valutazione=Valutazione
 label.visualizza_altri=Visualizza tutte le valutazioni
+label.visualizza_lista_accreditamenti=Visualizza la lista di tutti gli accreditamenti
+label.visualizza_lista_allegati=Visualizza la lista di tutti gli allegati
+label.visualizza_lista_eventi=Visualizza la lista di tutti gli eventi
+label.visualizza_lista_persone=Visualizza la lista di tutte le persone
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzatore prima di procedere alla compilazione dei Dati dei Responsabili.
 message.compilare_tab2=Si prega di compilare la sezione dei Dati dei Responsabili prima di procedere all'inserimento degli Allegati.
@@ -281,4 +294,4 @@ message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.pagato=Pagato
+label.nessun_allegato=Nessun allegato disponibile
