Aggiunta la pagina che elenca tutti gli allegati del provider
modificate opportunamente le label e i css
aggiunto metodo relativo nel fileController

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -295,3 +295,4 @@ message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
 label.nessun_allegato=Nessun allegato disponibile
+message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
