--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -182,6 +182,7 @@ label.obiettivo_formativo_regionale=Obiettivo formativo Regionale
 label.ok=ok
 label.organigramma=Organigramma
 label.organizzazione_natura=Natura dell'organizzazione
+label.pagato=Pagato
 label.partita_iva=Partita IVA
 label.password_corrente=Password corrente
 label.password_dimenticata=Hai dimenticato la password?
@@ -276,9 +277,9 @@ message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori se
 message.inserito=Il {0} è stato salvato con successo.
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
 message.password_cambiata=La password è stata cambiata con successo.
+message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.warning=Attenzione
-label.pagato=Pagato
