Riaggiunte label mancanti

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -250,6 +250,7 @@ label.sito_internet=Sito internet
 label.stato=Stato
 label.stato_account=Stato Account
 label.stato_inserimento=Stato Inserimento
+label.straniera=Straniera
 label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
@@ -268,6 +269,10 @@ label.validazione=Validazione
 label.valore=Valore
 label.valutazione=Valutazione
 label.visualizza_altri=Visualizza tutte le valutazioni
+label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
+label.visualizza_lista_allegati=Visualizza tutti gli allegati
+label.visualizza_lista_eventi=Visualizza tutti gli eventi
+label.visualizza_lista_persone=Visualizza tutte le persone
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzatore prima di procedere alla compilazione dei Dati dei Responsabili.
 message.compilare_tab2=Si prega di compilare la sezione dei Dati dei Responsabili prima di procedere all'inserimento degli Allegati.
