--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -169,6 +169,7 @@ label.modifica_utente=Modifica Utente
 label.natura_organizzazione=Natura dell'organizzazione
 label.nazionalita=Nazionalità
 label.nd=N\\D
+label.nessun_allegato=Nessun allegato disponibile
 label.nessun_file_selezionato=Nessun file selezionato
 label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
@@ -274,6 +275,7 @@ label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
+message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
 message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzatore prima di procedere alla compilazione dei Dati dei Responsabili.
 message.compilare_tab2=Si prega di compilare la sezione dei Dati dei Responsabili prima di procedere all'inserimento degli Allegati.
 message.completato=Operazione effettuata!
